libavformat_majorver = '58'
minorver = '45'
microver = '100'

libavformat_version = libavformat_majorver + '.' + minorver + '.' + microver

cc = meson.get_compiler('c')

libavformat_headers = files(
  'avformat.h',
  'avio.h',
)

#### --- GENERATED --- ####

libavformat_sources = files(
  'allformats.c',
  'avio.c',
  'aviobuf.c',
  'cutils.c',
  'dump.c',
  'format.c',
  'id3v1.c',
  'id3v2.c',
  'metadata.c',
  'mux.c',
  'options.c',
  'os_support.c',
  'qtpalette.c',
  'protocols.c',
  'riff.c',
  'sdp.c',
  'url.c',
  'utils.c',
  'file_open.c',
)

libavformat_optional_sources = {
  'a64_muxer' : files('a64.c','rawenc.c'),
  'aac_demuxer' : files('aacdec.c','apetag.c','img2.c','rawdec.c'),
  'aa_demuxer' : files('aadec.c'),
  'ac3_demuxer' : files('ac3dec.c','rawdec.c'),
  'ac3_muxer' : files('rawenc.c'),
  'acm_demuxer' : files('acm.c','rawdec.c'),
  'act_demuxer' : files('act.c'),
  'adf_demuxer' : files('bintext.c','sauce.c'),
  'adp_demuxer' : files('adp.c'),
  'ads_demuxer' : files('ads.c'),
  'adts_muxer' : files('adtsenc.c','apetag.c','img2.c','id3v2enc.c'),
  'adx_demuxer' : files('adxdec.c'),
  'adx_muxer' : files('rawenc.c'),
  'aea_demuxer' : files('aea.c','pcm.c'),
  'afc_demuxer' : files('afc.c'),
  'aiff_demuxer' : files('aiffdec.c','pcm.c','isom.c','mov_chan.c','replaygain.c'),
  'aiff_muxer' : files('aiffenc.c','id3v2enc.c'),
  'aix_demuxer' : files('aixdec.c'),
  'alp_demuxer' : files('alp.c'),
  'amrnb_demuxer' : files('amr.c'),
  'amrwb_demuxer' : files('amr.c'),
  'amr_demuxer' : files('amr.c'),
  'amr_muxer' : files('amr.c','rawenc.c'),
  'anm_demuxer' : files('anm.c'),
  'apc_demuxer' : files('apc.c'),
  'ape_demuxer' : files('ape.c','apetag.c','img2.c'),
  'apm_demuxer' : files('apm.c','riffdec.c'),
  'apng_demuxer' : files('apngdec.c'),
  'apng_muxer' : files('apngenc.c'),
  'applehttp_protocol' : files('hlsproto.c'),
  'aptx_demuxer' : files('aptxdec.c','rawdec.c'),
  'aptx_hd_demuxer' : files('aptxdec.c','rawdec.c'),
  'aptx_hd_muxer' : files('rawenc.c'),
  'aptx_muxer' : files('rawenc.c'),
  'aqtitle_demuxer' : files('aqtitledec.c','subtitles.c'),
  'argo_asf_demuxer' : files('argo_asf.c'),
  'asf_demuxer' : files('asfdec_f.c','asf.c','asfcrypt.c','avlanguage.c'),
  'asf_muxer' : files('asfenc.c','asf.c','avlanguage.c'),
  'asf_o_demuxer' : files('asfdec_o.c','asf.c','asfcrypt.c','avlanguage.c'),
  'ass_demuxer' : files('assdec.c','subtitles.c'),
  'ass_muxer' : files('assenc.c'),
  'ast_demuxer' : files('ast.c','astdec.c'),
  'ast_muxer' : files('ast.c','astenc.c'),
  'async_protocol' : files('async.c'),
  'au_demuxer' : files('au.c','pcm.c'),
  'au_muxer' : files('au.c','rawenc.c'),
  'av1_demuxer' : files('av1dec.c'),
  'avisynth_demuxer' : files('avisynth.c'),
  'avi_demuxer' : files('avidec.c'),
  'avi_muxer' : files('avienc.c','mpegtsenc.c','avlanguage.c','rawutils.c'),
  'avm2_muxer' : files('swfenc.c','swf.c'),
  'avr_demuxer' : files('avr.c','pcm.c'),
  'avs2_demuxer' : files('davs2.c','rawdec.c'),
  'avs2_muxer' : files('rawenc.c'),
  'avs_demuxer' : files('avs.c','voc_packet.c','vocdec.c','voc.c'),
  'bethsoftvid_demuxer' : files('bethsoftvid.c'),
  'bfi_demuxer' : files('bfi.c'),
  'bfstm_demuxer' : files('brstm.c'),
  'bink_demuxer' : files('bink.c'),
  'bintext_demuxer' : files('bintext.c','sauce.c'),
  'bit_demuxer' : files('bit.c'),
  'bit_muxer' : files('bit.c'),
  'bluray_protocol' : files('bluray.c'),
  'bmv_demuxer' : files('bmv.c'),
  'boa_demuxer' : files('boadec.c'),
  'brstm_demuxer' : files('brstm.c'),
  'c93_demuxer' : files('c93.c','voc_packet.c','vocdec.c','voc.c'),
  'cache_protocol' : files('cache.c'),
  'caf_demuxer' : files('cafdec.c','caf.c','mov_chan.c','mov_esds.c'),
  'caf_muxer' : files('cafenc.c','caf.c','riff.c'),
  'cavsvideo_demuxer' : files('cavsvideodec.c','rawdec.c'),
  'cavsvideo_muxer' : files('rawenc.c'),
  'cdg_demuxer' : files('cdg.c'),
  'cdxl_demuxer' : files('cdxl.c'),
  'chromaprint_muxer' : files('chromaprint.c'),
  'cine_demuxer' : files('cinedec.c'),
  'codec2raw_demuxer' : files('codec2.c','rawdec.c','pcm.c'),
  'codec2raw_muxer' : files('rawenc.c'),
  'codec2_demuxer' : files('codec2.c','rawdec.c','pcm.c'),
  'codec2_muxer' : files('codec2.c','rawenc.c'),
  'concat_demuxer' : files('concatdec.c'),
  'concat_protocol' : files('concat.c'),
  'crc_muxer' : files('crcenc.c'),
  'crypto_protocol' : files('crypto.c'),
  'dash_demuxer' : files('dash.c','dashdec.c'),
  'dash_muxer' : files('dash.c','dashenc.c','hlsplaylist.c'),
  'data_demuxer' : files('rawdec.c'),
  'data_muxer' : files('rawenc.c'),
  'data_protocol' : files('data_uri.c'),
  'daud_demuxer' : files('dauddec.c'),
  'daud_muxer' : files('daudenc.c'),
  'dcstr_demuxer' : files('dcstr.c'),
  'derf_demuxer' : files('derf.c','pcm.c'),
  'dfa_demuxer' : files('dfa.c'),
  'dhav_demuxer' : files('dhav.c'),
  'dirac_demuxer' : files('diracdec.c','rawdec.c'),
  'dirac_muxer' : files('rawenc.c'),
  'dnxhd_demuxer' : files('dnxhddec.c','rawdec.c'),
  'dnxhd_muxer' : files('rawenc.c'),
  'dsf_demuxer' : files('dsfdec.c'),
  'dsicin_demuxer' : files('dsicin.c'),
  'dss_demuxer' : files('dss.c'),
  'dtshd_demuxer' : files('dtshddec.c'),
  'dts_demuxer' : files('dtsdec.c','rawdec.c'),
  'dts_muxer' : files('rawenc.c'),
  'dvbsub_demuxer' : files('dvbsub.c','rawdec.c'),
  'dvbtxt_demuxer' : files('dvbtxt.c','rawdec.c'),
  'dv_demuxer' : files('dv.c'),
  'dv_muxer' : files('dvenc.c'),
  'dxa_demuxer' : files('dxa.c'),
  'eac3_demuxer' : files('ac3dec.c','rawdec.c'),
  'eac3_muxer' : files('rawenc.c'),
  'ea_cdata_demuxer' : files('eacdata.c'),
  'ea_demuxer' : files('electronicarts.c'),
  'epaf_demuxer' : files('epafdec.c','pcm.c'),
  'ffmetadata_demuxer' : files('ffmetadec.c'),
  'ffmetadata_muxer' : files('ffmetaenc.c'),
  'ffrtmpcrypt_protocol' : files('rtmpcrypt.c','rtmpdigest.c','rtmpdh.c'),
  'ffrtmphttp_protocol' : files('rtmphttp.c'),
  'fifo_muxer' : files('fifo.c'),
  'fifo_test_muxer' : files('fifo_test.c'),
  'file_protocol' : files('file.c'),
  'filmstrip_demuxer' : files('filmstripdec.c'),
  'filmstrip_muxer' : files('filmstripenc.c','rawenc.c'),
  'fits_demuxer' : files('fitsdec.c'),
  'fits_muxer' : files('fitsenc.c'),
  'flac_demuxer' : files('flacdec.c','rawdec.c','flac_picture.c','oggparsevorbis.c','replaygain.c','vorbiscomment.c'),
  'flac_muxer' : files('flacenc.c','flacenc_header.c','vorbiscomment.c'),
  'flic_demuxer' : files('flic.c'),
  'flv_demuxer' : files('flvdec.c'),
  'flv_muxer' : files('flvenc.c','avc.c'),
  'fourxm_demuxer' : files('4xm.c'),
  'framecrc_muxer' : files('framecrcenc.c','framehash.c'),
  'framehash_muxer' : files('hashenc.c','framehash.c'),
  'framemd5_muxer' : files('hashenc.c','framehash.c'),
  'frm_demuxer' : files('frmdec.c'),
  'fsb_demuxer' : files('fsb.c'),
  'ftp_protocol' : files('ftp.c','urldecode.c'),
  'fwse_demuxer' : files('fwse.c','pcm.c'),
  'g722_demuxer' : files('g722.c','rawdec.c'),
  'g722_muxer' : files('rawenc.c'),
  'g723_1_demuxer' : files('g723_1.c'),
  'g723_1_muxer' : files('rawenc.c'),
  'g726le_demuxer' : files('g726.c'),
  'g726le_muxer' : files('rawenc.c'),
  'g726_demuxer' : files('g726.c'),
  'g726_muxer' : files('rawenc.c'),
  'g729_demuxer' : files('g729dec.c'),
  'gdv_demuxer' : files('gdv.c'),
  'genh_demuxer' : files('genh.c'),
  'gif_demuxer' : files('gifdec.c'),
  'gif_muxer' : files('gif.c'),
  'gnutls' : files('tls_gnutls.c'), # MANUAL
  'gopher_protocol' : files('gopher.c'),
  'gsm_demuxer' : files('gsmdec.c'),
  'gsm_muxer' : files('rawenc.c'),
  'gxf_demuxer' : files('gxf.c'),
  'gxf_muxer' : files('gxfenc.c'),
  'h261_demuxer' : files('h261dec.c','rawdec.c'),
  'h261_muxer' : files('rawenc.c'),
  'h263_demuxer' : files('h263dec.c','rawdec.c'),
  'h263_muxer' : files('rawenc.c'),
  'h264_demuxer' : files('h264dec.c','rawdec.c'),
  'h264_muxer' : files('rawenc.c'),
  'hash_muxer' : files('hashenc.c'),
  'hca_demuxer' : files('hca.c'),
  'hcom_demuxer' : files('hcom.c','pcm.c'),
  'hds_muxer' : files('hdsenc.c'),
  'hevc_demuxer' : files('hevcdec.c','rawdec.c'),
  'hevc_muxer' : files('rawenc.c'),
  'hls_demuxer' : files('hls.c'),
  'hls_muxer' : files('hlsenc.c','hlsplaylist.c'),
  'hls_protocol' : files('hlsproto.c'),
  'hnm_demuxer' : files('hnm.c'),
  'httpproxy_protocol' : files('http.c','httpauth.c','urldecode.c'),
  'https_protocol' : files('http.c','httpauth.c','urldecode.c'),
  'http_protocol' : files('http.c','httpauth.c','urldecode.c'),
  'icecast_protocol' : files('icecast.c'),
  'ico_demuxer' : files('icodec.c'),
  'ico_muxer' : files('icoenc.c'),
  'idcin_demuxer' : files('idcin.c'),
  'idf_demuxer' : files('bintext.c','sauce.c'),
  'iec61883_indev' : files('dv.c'),
  'iff_demuxer' : files('iff.c'),
  'ifv_demuxer' : files('ifv.c'),
  'ilbc_demuxer' : files('ilbc.c'),
  'ilbc_muxer' : files('ilbc.c','rawenc.c'),
  'image2pipe_demuxer' : files('img2dec.c','img2.c'),
  'image2pipe_muxer' : files('img2enc.c','img2.c'),
  'image2_alias_pix_demuxer' : files('img2_alias_pix.c'),
  'image2_brender_pix_demuxer' : files('img2_brender_pix.c'),
  'image2_demuxer' : files('img2dec.c','img2.c'),
  'image2_muxer' : files('img2enc.c','img2.c'),
  'image_bmp_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_dds_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_dpx_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_exr_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_gif_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_j2k_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_jpegls_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_jpeg_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_pam_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_pbm_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_pcx_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_pgmyuv_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_pgm_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_pictor_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_png_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_ppm_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_psd_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_qdraw_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_sgi_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_sunrast_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_svg_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_tiff_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_webp_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_xpm_pipe_demuxer' : files('img2dec.c','img2.c'),
  'image_xwd_pipe_demuxer' : files('img2dec.c','img2.c'),
  'ingenient_demuxer' : files('ingenientdec.c','rawdec.c'),
  'ipmovie_demuxer' : files('ipmovie.c'),
  'ircam_demuxer' : files('ircamdec.c','ircam.c','pcm.c'),
  'ircam_muxer' : files('ircamenc.c','ircam.c','rawenc.c'),
  'iso_media' : files('isom.c'),
  'iss_demuxer' : files('iss.c'),
  'iv8_demuxer' : files('iv8.c'),
  'ivf_demuxer' : files('ivfdec.c'),
  'ivf_muxer' : files('ivfenc.c'),
  'ivr_demuxer' : files('rmdec.c','rm.c','rmsipr.c'),
  'jacosub_demuxer' : files('jacosubdec.c','subtitles.c'),
  'jacosub_muxer' : files('jacosubenc.c','rawenc.c'),
  'jv_demuxer' : files('jvdec.c'),
  'kux_demuxer' : files('flvdec.c'),
  'kvag_demuxer' : files('kvag.c'),
  'kvag_muxer' : files('kvag.c','rawenc.c'),
  'latm_muxer' : files('latmenc.c','rawenc.c'),
  'libamqp_protocol' : files('libamqp.c'),
  'libgme_demuxer' : files('libgme.c'),
  'libmodplug_demuxer' : files('libmodplug.c'),
  'libopenmpt_demuxer' : files('libopenmpt.c'),
  'librtmpe_protocol' : files('librtmp.c'),
  'librtmps_protocol' : files('librtmp.c'),
  'librtmpte_protocol' : files('librtmp.c'),
  'librtmpt_protocol' : files('librtmp.c'),
  'librtmp_protocol' : files('librtmp.c'),
  'libsmbclient_protocol' : files('libsmbclient.c'),
  'libsrt_protocol' : files('libsrt.c'),
  'libssh_protocol' : files('libssh.c'),
  'libzmq_protocol' : files('libzmq.c'),
  'live_flv_demuxer' : files('flvdec.c'),
  'lmlm4_demuxer' : files('lmlm4.c'),
  'loas_demuxer' : files('loasdec.c','rawdec.c'),
  'lrc_demuxer' : files('lrcdec.c','lrc.c','subtitles.c'),
  'lrc_muxer' : files('lrcenc.c','lrc.c'),
  'lvf_demuxer' : files('lvfdec.c'),
  'lxf_demuxer' : files('lxfdec.c'),
  'm4v_demuxer' : files('m4vdec.c','rawdec.c'),
  'm4v_muxer' : files('rawenc.c'),
  'matroska_demuxer' : files('matroskadec.c','matroska.c','rmsipr.c','flac_picture.c','oggparsevorbis.c','vorbiscomment.c','replaygain.c'),
  'matroska_muxer' : files('matroskaenc.c','matroska.c','av1.c','avc.c','hevc.c','flacenc_header.c','avlanguage.c','vorbiscomment.c','wv.c'),
  'md5_muxer' : files('hashenc.c'),
  'md5_protocol' : files('md5proto.c'),
  'mgsts_demuxer' : files('mgsts.c'),
  'microdvd_demuxer' : files('microdvddec.c','subtitles.c'),
  'microdvd_muxer' : files('microdvdenc.c'),
  'mjpeg_2000_demuxer' : files('rawdec.c','mj2kdec.c'),
  'mjpeg_demuxer' : files('rawdec.c'),
  'mjpeg_muxer' : files('rawenc.c'),
  'mkvtimestamp_v2_muxer' : files('mkvtimestamp_v2.c'),
  'mlp_demuxer' : files('rawdec.c','mlpdec.c'),
  'mlp_muxer' : files('rawenc.c'),
  'mlv_demuxer' : files('mlvdec.c','riffdec.c'),
  'mmf_demuxer' : files('mmf.c'),
  'mmf_muxer' : files('mmf.c','rawenc.c'),
  'mmsh_protocol' : files('mmsh.c','mms.c','asf.c'),
  'mmst_protocol' : files('mmst.c','mms.c','asf.c'),
  'mm_demuxer' : files('mm.c'),
  'mov_demuxer' : files('mov.c','mov_chan.c','mov_esds.c','replaygain.c'),
  'mov_muxer' : files('movenc.c','av1.c','avc.c','hevc.c','vpcc.c','movenchint.c','mov_chan.c','rtp.c','movenccenc.c','rawutils.c'),
  'mp2_muxer' : files('rawenc.c'),
  'mp3_demuxer' : files('mp3dec.c','replaygain.c'),
  'mp3_muxer' : files('mp3enc.c','rawenc.c','id3v2enc.c'),
  'mpc8_demuxer' : files('mpc8.c','apetag.c','img2.c'),
  'mpc_demuxer' : files('mpc.c','apetag.c','img2.c'),
  'mpeg1system_muxer' : files('mpegenc.c'),
  'mpeg1vcd_muxer' : files('mpegenc.c'),
  'mpeg1video_muxer' : files('rawenc.c'),
  'mpeg2dvd_muxer' : files('mpegenc.c'),
  'mpeg2svcd_muxer' : files('mpegenc.c'),
  'mpeg2video_muxer' : files('rawenc.c'),
  'mpeg2vob_muxer' : files('mpegenc.c'),
  'mpegps_demuxer' : files('mpeg.c'),
  'mpegts_demuxer' : files('mpegts.c'),
  'mpegts_muxer' : files('mpegtsenc.c'),
  'mpegvideo_demuxer' : files('mpegvideodec.c','rawdec.c'),
  'mpjpeg_demuxer' : files('mpjpegdec.c'),
  'mpjpeg_muxer' : files('mpjpeg.c'),
  'mpl2_demuxer' : files('mpl2dec.c','subtitles.c'),
  'mpsub_demuxer' : files('mpsubdec.c','subtitles.c'),
  'msf_demuxer' : files('msf.c'),
  'msnwc_tcp_demuxer' : files('msnwc_tcp.c'),
  'mtaf_demuxer' : files('mtaf.c'),
  'mtv_demuxer' : files('mtv.c'),
  'musx_demuxer' : files('musx.c'),
  'mvi_demuxer' : files('mvi.c'),
  'mv_demuxer' : files('mvdec.c'),
  'mxf_demuxer' : files('mxfdec.c','mxf.c'),
  'mxf_muxer' : files('mxfenc.c','mxf.c','avc.c'),
  'mxg_demuxer' : files('mxg.c'),
  'nc_demuxer' : files('ncdec.c'),
  'network' : files('network.c'),
  'nistsphere_demuxer' : files('nistspheredec.c','pcm.c'),
  'nsp_demuxer' : files('nspdec.c','pcm.c'),
  'nsv_demuxer' : files('nsvdec.c'),
  'null_muxer' : files('nullenc.c'),
  'nut_demuxer' : files('nutdec.c','nut.c','isom.c'),
  'nut_muxer' : files('nutenc.c','nut.c'),
  'nuv_demuxer' : files('nuv.c'),
  'oga_muxer' : files('oggenc.c','vorbiscomment.c'),
  'ogg_demuxer' : files('oggdec.c','oggparsecelt.c','oggparsedirac.c','oggparseflac.c','oggparseogm.c','oggparseopus.c','oggparseskeleton.c','oggparsespeex.c','oggparsetheora.c','oggparsevorbis.c','oggparsevp8.c','replaygain.c','vorbiscomment.c','flac_picture.c'),
  'ogg_muxer' : files('oggenc.c','vorbiscomment.c'),
  'ogv_muxer' : files('oggenc.c','vorbiscomment.c'),
  'oma_demuxer' : files('omadec.c','pcm.c','oma.c'),
  'oma_muxer' : files('omaenc.c','rawenc.c','oma.c','id3v2enc.c'),
  'opus_muxer' : files('oggenc.c','vorbiscomment.c'),
  'paf_demuxer' : files('paf.c'),
  'pcm_alaw_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_alaw_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_f32be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_f32be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_f32le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_f32le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_f64be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_f64be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_f64le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_f64le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_mulaw_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_mulaw_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_s16be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_s16be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_s16le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_s16le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_s24be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_s24be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_s24le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_s24le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_s32be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_s32be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_s32le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_s32le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_s8_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_s8_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_u16be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_u16be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_u16le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_u16le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_u24be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_u24be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_u24le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_u24le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_u32be_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_u32be_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_u32le_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_u32le_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_u8_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_u8_muxer' : files('pcmenc.c','rawenc.c'),
  'pcm_vidc_demuxer' : files('pcmdec.c','pcm.c'),
  'pcm_vidc_muxer' : files('pcmenc.c','rawenc.c'),
  'pipe_protocol' : files('file.c'),
  'pjs_demuxer' : files('pjsdec.c','subtitles.c'),
  'pmp_demuxer' : files('pmpdec.c'),
  'pp_bnk_demuxer' : files('pp_bnk.c'),
  'prompeg_protocol' : files('prompeg.c'),
  'pva_demuxer' : files('pva.c'),
  'pvf_demuxer' : files('pvfdec.c','pcm.c'),
  'qcp_demuxer' : files('qcp.c'),
  'r3d_demuxer' : files('r3d.c'),
  'rawvideo_demuxer' : files('rawvideodec.c'),
  'rawvideo_muxer' : files('rawenc.c'),
  'realtext_demuxer' : files('realtextdec.c','subtitles.c'),
  'redspark_demuxer' : files('redspark.c'),
  'riffdec' : files('riffdec.c'),
  'riffenc' : files('riffenc.c'),
  'rl2_demuxer' : files('rl2.c'),
  'rm_demuxer' : files('rmdec.c','rm.c','rmsipr.c'),
  'rm_muxer' : files('rmenc.c','rm.c'),
  'roq_demuxer' : files('idroqdec.c'),
  'roq_muxer' : files('idroqenc.c','rawenc.c'),
  'rpl_demuxer' : files('rpl.c'),
  'rsd_demuxer' : files('rsd.c'),
  'rso_demuxer' : files('rsodec.c','rso.c','pcm.c'),
  'rso_muxer' : files('rsoenc.c','rso.c','rawenc.c'),
  'rtmpe_protocol' : files('rtmpproto.c','rtmpdigest.c','rtmppkt.c'),
  'rtmps_protocol' : files('rtmpproto.c','rtmpdigest.c','rtmppkt.c'),
  'rtmpte_protocol' : files('rtmpproto.c','rtmpdigest.c','rtmppkt.c'),
  'rtmpts_protocol' : files('rtmpproto.c','rtmpdigest.c','rtmppkt.c'),
  'rtmpt_protocol' : files('rtmpproto.c','rtmpdigest.c','rtmppkt.c'),
  'rtmp_protocol' : files('rtmpproto.c','rtmpdigest.c','rtmppkt.c'),
  'rtpdec' : files('rdt.c','rtp.c','rtpdec.c','rtpdec_ac3.c','rtpdec_amr.c','rtpdec_asf.c','rtpdec_dv.c','rtpdec_g726.c','rtpdec_h261.c','rtpdec_h263.c','rtpdec_h263_rfc2190.c','rtpdec_h264.c','rtpdec_hevc.c','rtpdec_ilbc.c','rtpdec_jpeg.c','rtpdec_latm.c','rtpdec_mpa_robust.c','rtpdec_mpeg12.c','rtpdec_mpeg4.c','rtpdec_mpegts.c','rtpdec_qcelp.c','rtpdec_qdm2.c','rtpdec_qt.c','rtpdec_rfc4175.c','rtpdec_svq3.c','rtpdec_vc2hq.c','rtpdec_vp8.c','rtpdec_vp9.c','rtpdec_xiph.c'),
  'rtpenc_chain' : files('rtpenc_chain.c','rtp.c'),
  'rtp_mpegts_muxer' : files('rtpenc_mpegts.c'),
  'rtp_muxer' : files('rtp.c','rtpenc_aac.c','rtpenc_latm.c','rtpenc_amr.c','rtpenc_h261.c','rtpenc_h263.c','rtpenc_h263_rfc2190.c','rtpenc_h264_hevc.c','rtpenc_jpeg.c','rtpenc_mpv.c','rtpenc.c','rtpenc_vc2hq.c','rtpenc_vp8.c','rtpenc_vp9.c','rtpenc_xiph.c','avc.c','hevc.c'),
  'rtp_protocol' : files('rtpproto.c','ip.c'),
  'rtsp_demuxer' : files('rtsp.c','rtspdec.c','httpauth.c','urldecode.c'),
  'rtsp_muxer' : files('rtsp.c','rtspenc.c','httpauth.c','urldecode.c'),
  's337m_demuxer' : files('s337m.c','spdif.c'),
  'sami_demuxer' : files('samidec.c','subtitles.c'),
  'sap_demuxer' : files('sapdec.c'),
  'sap_muxer' : files('sapenc.c'),
  'sbc_demuxer' : files('sbcdec.c','rawdec.c'),
  'sbc_muxer' : files('rawenc.c'),
  'sbg_demuxer' : files('sbgdec.c'),
  'scc_demuxer' : files('sccdec.c','subtitles.c'),
  'scc_muxer' : files('sccenc.c','subtitles.c'),
  'sctp_protocol' : files('sctp.c'),
  'sdp_demuxer' : files('rtsp.c'),
  'sdr2_demuxer' : files('sdr2.c'),
  'sds_demuxer' : files('sdsdec.c'),
  'sdx_demuxer' : files('sdxdec.c','pcm.c'),
  'segafilm_demuxer' : files('segafilm.c'),
  'segafilm_muxer' : files('segafilmenc.c'),
  'segment_muxer' : files('segment.c'),
  'ser_demuxer' : files('serdec.c'),
  'shared' : files('log2_tab.c','golomb_tab.c'),
  'shorten_demuxer' : files('shortendec.c','rawdec.c'),
  'siff_demuxer' : files('siff.c'),
  'singlejpeg_muxer' : files('rawenc.c'),
  'sln_demuxer' : files('pcmdec.c','pcm.c'),
  'smacker_demuxer' : files('smacker.c'),
  'smjpeg_demuxer' : files('smjpegdec.c','smjpeg.c'),
  'smjpeg_muxer' : files('smjpegenc.c','smjpeg.c'),
  'smoothstreaming_muxer' : files('smoothstreamingenc.c'),
  'smush_demuxer' : files('smush.c'),
  'sol_demuxer' : files('sol.c','pcm.c'),
  'sox_demuxer' : files('soxdec.c','pcm.c'),
  'sox_muxer' : files('soxenc.c','rawenc.c'),
  'spdif_demuxer' : files('spdif.c','spdifdec.c'),
  'spdif_muxer' : files('spdif.c','spdifenc.c'),
  'speex_muxer' : files('oggenc.c','vorbiscomment.c'),
  'srtp' : files('srtp.c'),
  'srtp_protocol' : files('srtpproto.c','srtp.c'),
  'srt_demuxer' : files('srtdec.c','subtitles.c'),
  'srt_muxer' : files('srtenc.c'),
  'stl_demuxer' : files('stldec.c','subtitles.c'),
  'streamhash_muxer' : files('hashenc.c'),
  'stream_segment_muxer' : files('segment.c'),
  'str_demuxer' : files('psxstr.c'),
  'subfile_protocol' : files('subfile.c'),
  'subviewer1_demuxer' : files('subviewer1dec.c','subtitles.c'),
  'subviewer_demuxer' : files('subviewerdec.c','subtitles.c'),
  'sup_demuxer' : files('supdec.c'),
  'sup_muxer' : files('supenc.c'),
  'svag_demuxer' : files('svag.c'),
  'swf_demuxer' : files('swfdec.c','swf.c'),
  'swf_muxer' : files('swfenc.c','swf.c'),
  'tak_demuxer' : files('takdec.c','apetag.c','img2.c','rawdec.c'),
  'tcp_protocol' : files('tcp.c'),
  'tedcaptions_demuxer' : files('tedcaptionsdec.c','subtitles.c'),
  'tee_muxer' : files('tee.c','tee_common.c'),
  'tee_protocol' : files('teeproto.c','tee_common.c'),
  'thp_demuxer' : files('thp.c'),
  'threedostr_demuxer' : files('3dostr.c'),
  'tiertexseq_demuxer' : files('tiertexseq.c'),
  'tls_protocol' : files('tls.c'),
  'tmv_demuxer' : files('tmv.c'),
  'truehd_demuxer' : files('rawdec.c','mlpdec.c'),
  'truehd_muxer' : files('rawenc.c'),
  'tta_demuxer' : files('tta.c','apetag.c','img2.c'),
  'tta_muxer' : files('ttaenc.c','apetag.c','img2.c'),
  'tty_demuxer' : files('tty.c','sauce.c'),
  'txd_demuxer' : files('txd.c'),
  'ty_demuxer' : files('ty.c'),
  'udplite_protocol' : files('udp.c','ip.c'),
  'udp_protocol' : files('udp.c','ip.c'),
  'uncodedframecrc_muxer' : files('uncodedframecrcenc.c','framehash.c'),
  'unix_protocol' : files('unix.c'),
  'v210x_demuxer' : files('v210.c'),
  'v210_demuxer' : files('v210.c'),
  'vag_demuxer' : files('vag.c'),
  'vapoursynth_demuxer' : files('vapoursynth.c'),
  'vc1t_demuxer' : files('vc1test.c'),
  'vc1t_muxer' : files('vc1testenc.c'),
  'vc1_demuxer' : files('rawdec.c','vc1dec.c'),
  'vc1_muxer' : files('rawenc.c'),
  'vividas_demuxer' : files('vividas.c'),
  'vivo_demuxer' : files('vivo.c'),
  'vmd_demuxer' : files('sierravmd.c'),
  'vobsub_demuxer' : files('subtitles.c'),
  'voc_demuxer' : files('vocdec.c','voc_packet.c','voc.c'),
  'voc_muxer' : files('vocenc.c','voc.c'),
  'vpk_demuxer' : files('vpk.c'),
  'vplayer_demuxer' : files('vplayerdec.c','subtitles.c'),
  'vqf_demuxer' : files('vqf.c'),
  'w64_demuxer' : files('wavdec.c','w64.c','pcm.c'),
  'w64_muxer' : files('wavenc.c','w64.c'),
  'wav_demuxer' : files('wavdec.c','pcm.c'),
  'wav_muxer' : files('wavenc.c'),
  'wc3_demuxer' : files('wc3movie.c'),
  'webm_chunk_muxer' : files('webm_chunk.c'),
  'webm_dash_manifest_muxer' : files('webmdashenc.c'),
  'webm_muxer' : files('matroskaenc.c','matroska.c','av1.c','avc.c','hevc.c','flacenc_header.c','avlanguage.c','wv.c','vorbiscomment.c'),
  'webp_muxer' : files('webpenc.c'),
  'webvtt_demuxer' : files('webvttdec.c','subtitles.c'),
  'webvtt_muxer' : files('webvttenc.c'),
  'wsaud_demuxer' : files('westwood_aud.c'),
  'wsd_demuxer' : files('wsddec.c','rawdec.c'),
  'wsvqa_demuxer' : files('westwood_vqa.c'),
  'wtv_demuxer' : files('wtvdec.c','wtv_common.c','asf.c'),
  'wtv_muxer' : files('wtvenc.c','wtv_common.c','asf.c'),
  'wve_demuxer' : files('wvedec.c','pcm.c'),
  'wv_demuxer' : files('wvdec.c','wv.c','apetag.c','img2.c'),
  'wv_muxer' : files('wvenc.c','wv.c','apetag.c','img2.c'),
  'xa_demuxer' : files('xa.c'),
  'xbin_demuxer' : files('bintext.c','sauce.c'),
  'xmv_demuxer' : files('xmv.c'),
  'xvag_demuxer' : files('xvag.c'),
  'xwma_demuxer' : files('xwma.c'),
  'yop_demuxer' : files('yop.c'),
  'yuv4mpegpipe_demuxer' : files('yuv4mpegdec.c'),
  'yuv4mpegpipe_muxer' : files('yuv4mpegenc.c'),
}

libavformat_x86asm_optional_sources = {
}

libavformat_mmx_optional_sources = {
}

libavformat_tests = [
  # MANUAL ['seek', files('tests/seek.c')],
  ['url', files('tests/url.c')],
]

libavformat_optional_tests = {
  'ffrtmpcrypt_protocol' : [
    ['rtmpdh', files('tests/rtmpdh.c')],
  ],
  'fifo_muxer' : [
  ],
  'mov_muxer' : [
    ['movenc', files('tests/movenc.c')],
  ],
  'network' : [
    ['noproxy', files('tests/noproxy.c')],
  ],
  'srtp' : [
    ['srtp', files('tests/srtp.c')],
  ],
}

#### --- END GENERATED --- ####

# Version file
ver_conf = configuration_data()
ver_conf.set('majorver', libavcodec_majorver)
ver_conf.set('minorver', minorver)
ver_conf.set('microver', microver)

configure_file(
  input: 'version.h.in',
  output: 'version.h',
  configuration: ver_conf,
  install_dir: join_paths(get_option('includedir'), 'libavformat'),
  install: true,
)

install_headers(libavformat_headers, subdir: 'libavformat')

configure_file(
  input: 'libavformat.v.in',
  output: 'libavformat.ver',
  configuration: ver_conf,
)
